--- a/dev_syn/使用手册.md
+++ b/dev_syn/使用手册.md
@@ -2,3 +2,5 @@
 
 1. 使用网络调试助手广播发送 `/getIP:s,ip;`指令，获取所有设备的 IP 地址
 2. 使用网络调试助手广播发送 `/setNetworkID:s," #ip "," #id ";`指令，选择设备组网(组网 id 要大于 0)
+
+明天任务：`/setTimeServer:s,flag;`指定服务器
