--- a/dev_syn/使用手册.md
+++ b/dev_syn/使用手册.md
@@ -3,3 +3,8 @@
 1. 使用网络调试助手广播发送 `/getIP:s,ip;`指令，获取所有设备的 IP 地址。
 2. 使用网络调试助手广播发送 `/setNetworkID:s," #ip "," #id ";`指令，选择设备组网(组网 id 要大于 0)。组网设备达到两个时，开始执行网络延时校正，并且确认客户端是否就绪，就绪则发送开始指令`/setup:d,1;`。
 3. 如果组网标志是 1 及自主选择，所有节点初始都发送授时包，组网后根据优先级(优先级相同则根据 IP)选择服务器，其他节点作为客户端，接收授时包。如果组网标志是 0 及指定服务器，所有节点初始化都作为客户端，收到`/setTimeServer:s," #ip ";`指令后，选择指定节点作为服务器，其他节点作为客户端，接收授时包。**(同一组网内的所有节点组网标志必须唯一)**
+4. 替换节点时，服务端 JSON 文件中必须有空闲的 IP 地址，否则替换失败。
+
+替换节点：
+
+1. 每个节点开机进入请求模式，广播发送请求指令，服务器发送 JSON 文件，新节点
