Fix h264 packet handling and print debug information

--- a/dev_syn/使用手册.md
+++ b/dev_syn/使用手册.md
@@ -5,9 +5,9 @@
 启动前如果`sys_config.json`文件中 IP 地址表为**空**，组网标志应设置为 **0**。启动后需要手动组网，然后再手动指定服务器。(指定服务器后也可以继续添加 IP 组网)  
 启动前如果`sys_config.json`文件中 IP 地址表完善，组网标志可设置为 1，启动后不需要手动组网，自动产生服务器，之后也可以手动指定服务器。组网标志也可以设置为 0，启动后直接手动指定服务器。
 
-所有设备启动时默认组网 id 为 0，所以当手动分配组网 id 时，组网 id 必须大于 0。
+**所有设备启动时默认组网 id 为 0，所以当手动分配组网 id 时，组网 id 必须大于 0。**
 
 1. 使用网络调试助手广播发送 `/getIP:s,ip;`指令，获取所有设备的 IP 地址。
-2. 使用网络调试助手广播发送 `/setNetworkID:s," #ip "," #id ";`指令，选择设备组网(组网 id 要大于 0)。组网设备达到两个时，服务端开始执行网络延时校正，再确认所有客户端是否就绪，就绪则发送开始指令`/setup:d,1;`。
+2. 使用网络调试助手广播发送 `/setNetworkID:s," #ip "," #id ";`指令，选择设备组网(组网 id 要大于 0)。组网设备达到两个时，服务端开始执行网络延时校正，再确认所有客户端是否就绪，就绪则自动发送开始指令`/setup:d,1;`，服务端开始发送视频数据，客户端开始接收视频数据。
 3. 如果组网标志都是 1 及自主选择，所有节点初始都发送授时包，组网后根据优先级(优先级相同则根据 IP)选择服务器，其他节点作为客户端，接收授时包。如果组网标志都是 0 及指定服务器，所有节点初始化都作为客户端，收到`/setTimeServer:s," #ip ";`指令后，选择指定节点作为服务器，其他节点作为客户端，接收授时包。**(同一组网内的所有节点组网标志必须唯一)**
 4. 替换节点时，服务端 JSON 文件中必须有空闲的 IP 地址，否则替换失败。
